overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ nav ul li a.active, nav ul li a:hover{
   overflow-x:hidden;
 }
 .main-area div h1 {
-  width: 50%;
+  width: auto;
   font-size: 48px;
   color: #fff;
   margin: 0 auto;
